# aidati

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  PRD-AI智能出题学习小程序.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.cursor/: mcp.json
admin-web/: .env.development  .env.example  .eslintrc.cjs  Dockerfile  README.md  eslint.config.mjs  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
admin-web/src/: components.d.ts  main.ts  vite-env.d.ts
ai-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
ai-service/app/: __init__.py  main.py
ai-service/app/adapters/: __init__.py  base.py  factory.py  mock.py  openai_compat.py
ai-service/app/core/: auth.py  config.py  logging.py
ai-service/app/models/: __init__.py  extract.py  grade.py  llm_runtime.py  question.py
ai-service/app/routers/: extract.py  generate.py  grade.py
ai-service/app/services/: __init__.py  chapter_splitter.py  document_extract.py  llm_client.py  parser.py  prompt_builder.py  vision_client.py
backend/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  README.md  package.json  tsconfig.json
deploy/: README.md  docker-compose.prod.yml  docker-compose.yml
miniprogram/: .env.example  .eslintrc.cjs  README.md  app.json  app.ts  app.wxss  package.json  project.config.json  project.private.config.json  sitemap.json  tsconfig.json
开发文档/: 01-技术架构文档.md  02-数据库设计文档.md  03-API接口文档.md  04-前端开发规范.md  05-部署运维与安全.md  06-UI设计规范.md  BUG-清单与PRD差异.md  README.md
(+307 files in other folders)
