[project]
name = "ai-quiz-ai-service"
version = "0.1.0"
description = "AI 智能出题学习小程序 - AI 编排服务 (FastAPI)"
requires-python = ">=3.11"
authors = [{ name = "Karl" }]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "redis==5.2.1",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "orjson==3.10.13",
    "openai==1.59.3",
    "jsonschema==4.23.0",
    "Pillow==11.0.0",
    "pdfplumber==0.11.4",
    "PyMuPDF>=1.27",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-httpx==0.35.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "types-redis==4.6.0.20241004",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "venv", "__pycache__", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
